Fix double load json

--- a/hw2/app/views/search.html
+++ b/hw2/app/views/search.html
@@ -1,4 +1,4 @@
-<div ng-controller="SearchController as ctrl">
+<div>
 
     <div ng-include="'views/searchForm.html'"></div>
   <h2 class="well well-sm" id="app-heading">
